[package]
name = "signal-media-exporter-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "*", features = ["bundled-sqlcipher"] }
anyhow = "1.0.78"

